--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-#
-/.gradle
-/.idea
-/build
-/gradle
-build.gradle
-gradlew
-settings.gradle
-gradlew.bat
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+out/production/SeiTchiz/followers.txt
+out/production/SeiTchiz/users.txt
+out/production/SeiTchizSever/followers.txt
+out/production/SeiTchizSever/groups.txt
+SeiTchiz/SeiTchiz.iml
